assets/css/style.css
body {
    background-image: url('../images/houndstooth-pattern.png');
    background-repeat: repeat;   
    overflow-x: hidden;
}
.navbar {
    padding-left: 0;
}
.logo  {
    display: inline;
    font-family: 'Fascinate', cursive;
    color: teal !important;  
    font-size: 1.2rem;
    text-transform: uppercase;
    
}
.body-content {
 background: #f3f3f3;
}
.gems {
    min-height: 115px;
}
.gems img {
    margin: 20px;
    cursor: pointer;
}
.gems img:hover {
    
}
.instructions {
    padding: 1.5rem;
    font-size: 1.1rem;
}
.instructLink {
    float: right;
    color: teal;
    margin-top: 20px;
    margin-right: 40px;
}
.collected {
    height: 30px;
    margin: 5px;
}
.collectedCrystals {
    padding: 1rem;       
}
.randomNum, .totalScore {
    background: teal;
    font-size: 3rem;
    color: #fff;
    
}
.scoreboard {
    background: #A82281;
    padding: 1rem;
    color: #fff;
    font-weight: bold;
}
.scoreboard span {
    float: right;
}
.totalScore {
    margin: 0 0 20px 0;
    padding: 1rem 2rem;
}
.totalLabel {
    background: #efc902;
    font-weight: bold;

}

